<resources>
    <string name="app_name">Pay Me!</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_out">Signed Out</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_verification_code">Verification Code</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="text_phone_no_empty">Phone no can\'t be empty.</string>
    <string name="text_check_internet">Please connect to internet.</string>
    <string name="title_main">Home</string>
    <string name="title_board">Board</string>
    <string name="title_frieds">Friends</string>
    <string name="title_invests">Invests</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="text_balance_amount_total">Balance Amount Total</string>
    <string name="dummy_amount">MYR 10.000,00</string>
    <string name="text_lend_money_to">Lend Money To</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_hint_mobile_number">1xxx</string>
    <string name="text_send_code">Send Code</string>
    <string name="text_resend">Resend Code</string>
    <string name="text_hint_tac_code">xxxx</string>
    <string name="text_tac">TAC Code</string>
    <string name="text_verify_code">Verify Code</string>
    <string name="dummy_name">Aldi Maulana</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_approved">Approved</string>
    <string name="text_name">Name</string>
    <string name="text_hint_name">John Doe</string>
    <string name="text_amount">Amount to Loan (MYR)</string>
    <string name="text_hint_amount">MYR xxx</string>
    <string name="text_hint_tenure">x Month (s)</string>
    <string name="text_tenure">Tenure</string>
    <string name="text_hint_interest">10</string>
    <string name="text_interest">Interest (%)</string>
    <string name="text_address">Address</string>
    <string name="text_credit_score">Score</string>
    <string name="text_hint_gender">Male/Female</string>
    <string name="text_gender">Gender</string>
    <string name="text_detail_loaner">Loaner Information</string>
    <string name="text_detail_loan">Loan Information</string>
    <string name="text_postal_code">Postal Code</string>
    <string name="text_city">City</string>
    <string name="text_state">State</string>
    <string name="text_mobile">Mobile</string>
    <string name="text_reject">Reject</string>
    <string name="text_accept">Accept</string>
    <string name="text_invest">Investing</string>
    <string name="text_earn">Earning</string>
    <string name="subcribed">Free Account</string>
    <string name="text_change_plan">Change Plan</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_subscribe">Premium Plan: \n\n- Free Insurance for your Money\n- Suggestion of Good User to Investing \n- Transaction Summary and Analytic \n- Bank Support</string>

    <string name="radio_borrower">Borrower</string>
    <string name="radio_lender">Lender</string>

    <string name="text_sucessfully_updated">Successfully updated.</string>


    <string name="text_paid">Paid</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">6, Jalan Damanlela, Bukit Damansara, 50490 Kuala Lumpur, Wilayah Persekutuan Kuala Lumpur</string>
    <string name="text_borrowed">Borrowed</string>
    <string name="title_profile">Profile</string>
    <string name="title_borrow">Borrow</string>

    <string name="text_plan_price">MYR 50 \nper month</string>
    <string name="text_type">Account Type</string>
</resources>
