<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.InvestsFragment"
    android:orientation="vertical"
    android:focusable="true"
    android:id="@+id/container"
    android:focusableInTouchMode="true"
    android:paddingBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        style="@style/AppTheme.Layout.Horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageFoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/photo_al"
            tools:src="@tools:sample/avatars"/>

        <com.jomhack.lendme.components.JomTextView
            android:id="@+id/textName"
            app:JomFont="M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_medium"
            tools:text="@tools:sample/full_names"
            android:textColor="@color/colorTextPrimaryDark"
            android:textSize="@dimen/text_title_big"
            android:gravity="center"/>

        <com.jomhack.lendme.components.JomTextView
            android:id="@+id/textMobileNumber"
            app:JomFont="R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/component_small"
            tools:text="@tools:sample/full_names"
            android:textColor="@color/colorTextPrimaryDark"
            android:textSize="@dimen/text_title_small"
            android:gravity="center"/>

        <com.jomhack.lendme.components.JomTextView
            android:id="@+id/textSubscription"
            app:JomFont="B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/component_small"
            android:text="@string/subcribed"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/text_title_small"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/divider"
        android:background="@color/colorWhite"
        style="@style/AppTheme.Layout.Horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/component_extra_big">

        <com.jomhack.lendme.components.JomTextView
            app:JomFont="R"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:text="@string/text_subscribe"
            android:textColor="@color/colorTextPrimaryDark"
            android:textSize="@dimen/text_title_small"
            android:layout_marginRight="@dimen/component_medium"
            android:gravity="left"/>

        <com.jomhack.lendme.components.JomTextView
            app:JomFont="R"
            android:layout_marginTop="@dimen/component_small"
            android:layout_gravity="center"
            android:background="@drawable/shape_amount"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="match_parent"
            android:text="@string/text_plan_price"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_title_big"
            android:padding="@dimen/component_medium"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/AppTheme.Layout.Horizontal"
        android:layout_marginBottom="@dimen/component_extra"
        android:weightSum="2.25">

        <com.jomhack.lendme.components.JomButton
            app:JomFont="M"
            android:id="@+id/changePlan"
            android:stateListAnimator="@null"
            style="@style/AppTheme.ButtonInput.Flat"
            android:layout_width="0dp"
            android:layout_weight="1.075"
            android:layout_height="wrap_content"
            android:text="@string/text_change_plan"
            android:textColor="@color/colorWhite"
            tools:targetApi="lollipop" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.10"/>

        <com.jomhack.lendme.components.JomButton
            app:JomFont="M"
            android:id="@+id/logOutButton"
            android:stateListAnimator="@null"
            style="@style/AppTheme.ButtonInput.Flat.Secondary"
            android:layout_width="0dp"
            android:layout_weight="1.075"
            android:layout_height="wrap_content"
            android:text="@string/text_log_out"
            android:textColor="@color/colorWhite"
            tools:targetApi="lollipop" />

    </LinearLayout>

</LinearLayout>