<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.BoardFragment"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="60dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:stateListAnimator="@animator/appbar_elevation"
        style="@style/AppTheme.Layout.Parent"
        android:layout_marginBottom="@dimen/component_extra_big"
        tools:targetApi="lollipop">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/buttonWallet"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/button_icon"
            android:layout_height="@dimen/button_icon"
            android:scaleType="centerInside"
            android:background="@drawable/button_icon_primary"
            android:src="@drawable/ic_wallet"/>

        <com.jomhack.lendme.components.JomTextView
            app:JomFont="R"
            android:id="@+id/label_balance_amount_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/text_balance_amount_total"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="@dimen/text_title_tiny"
            android:layout_marginRight="@dimen/component_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonWallet"
            android:layout_marginEnd="@dimen/component_small" />

        <com.jomhack.lendme.components.JomTextView
            app:JomFont="M"
            android:id="@+id/textAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/dummy_amount"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="@dimen/component_extra_small"
            android:layout_marginRight="@dimen/component_small"
            android:textSize="@dimen/text_title_big"
            app:layout_constraintTop_toBottomOf="@id/label_balance_amount_total"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonWallet"
            android:layout_marginEnd="@dimen/component_small" />

    </android.support.constraint.ConstraintLayout>

    <com.jomhack.lendme.components.JomTextView
        app:JomFont="M"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/text_lend_money_to"
        android:textColor="@color/colorTextPrimaryDark"
        android:layout_marginBottom="@dimen/component_big"
        android:textSize="@dimen/text_title_tiny"
        style="@style/AppTheme.Layout.Horizontal"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:nestedScrollingEnabled="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:isScrollContainer="false"
        tools:targetApi="lollipop"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:layout_marginBottom="@dimen/component_extra_big"
        app:reverseLayout="false"
        tools:listitem="@layout/item_card_contact"
        tools:ignore="RtlSymmetry"/>

    <com.jomhack.lendme.components.JomTextView
        app:JomFont="M"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/text_transaction_history"
        android:textColor="@color/colorTextPrimaryDark"
        android:layout_marginBottom="@dimen/component_big"
        android:textSize="@dimen/text_title_tiny"
        style="@style/AppTheme.Layout.Horizontal"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewApplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:nestedScrollingEnabled="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:isScrollContainer="false"
        tools:targetApi="lollipop"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:reverseLayout="false"
        tools:listitem="@layout/item_list_history"
        android:layout_marginBottom="@dimen/component_extra_big"
        tools:ignore="RtlSymmetry"/>


</LinearLayout>